# wc26-forecast

./: .gitignore  BENCHMARK.md  LICENSE  README.md  pyproject.toml
data/: wc2026_bracket.json  wc2026_group_fixtures.csv  wc2026_groups.csv
notebooks/: 01_wc2026_showcase.ipynb
predictions/: champion_probs.csv  final_pairings.csv  group_stage.csv  mpp_odds_snapshot.csv  mpp_picks.csv  mpp_picks_real_odds.csv  simulation.csv  slot_forecasts.csv
reports/: backtest_aggregate.csv  backtest_by_match.csv  backtest_metrics.csv
scripts/: build_notebook.py  run_backtest_step.py  run_sim_chunk.py  run_train_step.py
src/wcforecast/: __init__.py  cli.py  config.py  predictor.py
src/wcforecast/data/: __init__.py  results.py  wc2026.py
src/wcforecast/eval/: __init__.py  backtest.py  metrics.py
src/wcforecast/explain/: __init__.py  shap_explain.py
src/wcforecast/features/: __init__.py  build.py  elo.py
src/wcforecast/models/: __init__.py  baselines.py  dixon_coles.py  ensemble.py  gbm.py  poisson_core.py
src/wcforecast/mpp/: __init__.py  optimizer.py
src/wcforecast/sim/: __init__.py  tournament.py
src/wcforecast/viz/: __init__.py  plots.py
tests/: test_dixon_coles.py  test_elo.py  test_metrics.py  test_mpp.py  test_poisson_core.py  test_tournament.py
