[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wcforecast"
version = "0.1.0"
description = "Probabilistic score forecasting for the FIFA World Cup 2026 — Dixon-Coles + gradient boosting ensemble with uncertainty quantification, tournament simulation and an MPP (Mon Petit Prono) pick optimizer."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "gclaus", email = "https://www.linkedin.com/in/gregoireclaus/" }]
keywords = ["football", "soccer", "forecasting", "world-cup", "poisson", "dixon-coles", "uncertainty"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "lightgbm>=4.0",
    "typer>=0.12",
    "rich>=13.0",
    "matplotlib>=3.7",
    "joblib>=1.3",
]

[project.optional-dependencies]
explain = ["shap>=0.44"]
dev = ["pytest>=7.4", "ruff>=0.4", "nbformat>=5.9", "nbclient>=0.9", "ipykernel"]

[project.scripts]
wcf = "wcforecast.cli:main"

[project.urls]
Repository = "https://github.com/CodeWithGreg/wc26-forecast"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wcforecast = ["py.typed"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501", "B905"]  # B905: zip(strict=) noise — lengths are structural here

[tool.ruff.lint.per-file-ignores]
"src/wcforecast/cli.py" = ["B008"]  # typer.Option in defaults is idiomatic Typer

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
